Improvement section started. --ChufanLai

--- a/papers/PC_Data.bib
+++ b/papers/PC_Data.bib
@@ -2,6 +2,21 @@
 % Encoding: UTF-8
 
 
+@Article{kosara2006parallel,
+  Title                    = {Parallel sets: Interactive exploration and visual analysis of categorical data},
+  Author                   = {, Robert and Bendix, Fabian and Hauser, Helwig},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2006},
+  Number                   = {4},
+  Pages                    = {558--568},
+  Volume                   = {12},
+
+  File                     = {:Parallel sets\: Interactive exploration and visual analysis of categorical data.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.08}
+}
+
 @InProceedings{barlow2004animator,
   Title                    = {Animator: A tool for the animation of parallel coordinates},
   Author                   = {Barlow, N and Stuart, Liz J},
@@ -9,6 +24,7 @@
   Year                     = {2004},
   Organization             = {IEEE},
   Pages                    = {725--730},
+
   File                     = {:Animator\: A Tool for the Animation of Parallel Coordinates .pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -21,6 +37,7 @@
   Year                     = {2005},
   Organization             = {IEEE},
   Pages                    = {133--140},
+
   File                     = {:Parallel sets\: Visual analysis of categorical data.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -34,6 +51,7 @@
   Number                   = {6},
   Pages                    = {1436--1451},
   Volume                   = {14},
+
   File                     = {:Extensions of parallel coordinates for interactive exploration of large multi-timepoint data sets.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -47,6 +65,7 @@
   Year                     = {2009},
   Organization             = {IEEE},
   Pages                    = {91--98},
+
   File                     = {:Parallel Coordinates tag clouds to explore and analyze faceted text corpora.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -62,7 +81,6 @@
   Pages                    = {1015--1024},
   Volume                   = {31},
 
-  __markedentry            = {},
   File                     = {:Conceptualizing visual uncertainty in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -76,6 +94,7 @@
   Number                   = {12},
   Pages                    = {2241--2248},
   Volume                   = {17},
+
   File                     = {:Adaptive privacy-preserving visualization using parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -90,10 +109,41 @@
   Number                   = {6},
   Pages                    = {980--989},
   Volume                   = {16},
+
   File                     = {:Matching visual saliency to confidence in plots of uncertain data.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
   Timestamp                = {2015.04.08}
+}
+
+@Article{heinrich2009continuous,
+  Title                    = {Continuous parallel coordinates},
+  Author                   = {Heinrich, Julian and Weiskopf, Daniel},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2009},
+  Number                   = {6},
+  Pages                    = {1531--1538},
+  Volume                   = {15},
+
+  File                     = {:Continuous parallel coordinates.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.06}
+}
+
+@Article{hofmann2013common,
+  Title                    = {Common angle plots as perception-true visualizations of categorical associations},
+  Author                   = {Hofmann, Heike and Vendettuoli, Marie},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2013},
+  Number                   = {12},
+  Pages                    = {2297--2305},
+  Volume                   = {19},
+
+  File                     = {:Common Angle Plots as Perception-True Visualizations of Categorical Associations.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.28}
 }
 
 @InProceedings{johansson2007depth,
@@ -103,20 +153,22 @@
   Year                     = {2007},
   Pages                    = {35--42},
   Volume                   = {7},
+
   File                     = {:Depth cues and density in temporal parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
 }
 
-@Article{kosara2006parallel,
-  Title                    = {Parallel sets: Interactive exploration and visual analysis of categorical data},
-  Author                   = {Kosara, Robert and Bendix, Fabian and Hauser, Helwig},
+@Article{lehmann2011features,
+  Title                    = {Features in continuous parallel coordinates},
+  Author                   = {Lehmann, Dirk J and Theisel, Holger},
   Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
-  Year                     = {2006},
-  Number                   = {4},
-  Pages                    = {558--568},
-  Volume                   = {12},
-  File                     = {:Parallel sets\: Interactive exploration and visual analysis of categorical data.pdf:PDF},
+  Year                     = {2011},
+  Number                   = {12},
+  Pages                    = {1912--1921},
+  Volume                   = {17},
+
+  File                     = {:Features in continuous parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
   Timestamp                = {2015.04.08}
