--- a/survey/parallelcoordinates.bib
+++ b/survey/parallelcoordinates.bib
@@ -155,7 +155,7 @@
   Pages                    = {2310--2316},
   Volume                   = {17},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Flexible linked axes for multivariate data visualization.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -275,7 +275,7 @@
   Organization             = {IEEE},
   Pages                    = {149--156},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:An interactive 3D integration of parallel coordinates and star glyphs.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -333,7 +333,7 @@
   Pages                    = {150--159},
   Volume                   = {6},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Structure-based brushes\: a mechanism for navigating hierarchically organized data and information spaces.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -396,6 +396,21 @@
   File                     = {:Using curves to enhance parallel coordinate visualisations.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
+}
+
+@Article{gratzl2013lineup,
+  Title                    = {Lineup: Visual analysis of multi-attribute rankings},
+  Author                   = {Gratzl, Samuel and Lex, Alexander and Gehlenborg, Nils and Pfister, Hanspeter and Streit, Marc},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2013},
+  Number                   = {12},
+  Pages                    = {2277--2286},
+  Volume                   = {19},
+
+  File                     = {:Lineup\: Visual analysis of multi-attribute rankings.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.29}
 }
 
 @InProceedings{grinstein2001high,
@@ -477,7 +492,7 @@
   Pages                    = {653--662},
   Volume                   = {30},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Progressive splatting of continuous scatterplots and parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -550,6 +565,22 @@
   File                     = {:Dimensional anchors\: a graphic primitive for multidimensional multivariate information visualizations.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
+}
+
+@Article{hofmann2013common,
+  Title                    = {Common angle plots as perception-true visualizations of categorical associations},
+  Author                   = {Hofmann, Heike and Vendettuoli, Marie},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2013},
+  Number                   = {12},
+  Pages                    = {2297--2305},
+  Volume                   = {19},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:Common Angle Plots as Perception-True Visualizations of Categorical Associations.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.28}
 }
 
 @InProceedings{holten2010evaluation,
@@ -787,7 +818,7 @@
   Organization             = {IEEE},
   Pages                    = {25--31},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Many-to-many relational parallel coordinates displays.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -830,7 +861,7 @@
   Year                     = {2002},
   Pages                    = {41--48},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:On some generalizations of parallel coordinate plots.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -921,7 +952,7 @@
   Pages                    = {80--95},
   Volume                   = {3},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Mapping Nominal Values to Numbers for Effective Visualization.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {SAGE Publications},
@@ -936,7 +967,7 @@
   Organization             = {IEEE},
   Pages                    = {25--32},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Progressive parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -1071,7 +1102,7 @@
   Pages                    = {1100--1108},
   Volume                   = {16},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:The FlowVizMenu and parallel scatterplot matrix\: Hybrid multidimensional visualizations for network exploration.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -1127,7 +1158,7 @@
   Pages                    = {1001--1008},
   Volume                   = {15},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Scattering points in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -1172,7 +1203,7 @@
   Organization             = {ACM},
   Pages                    = {49},
 
-  __markedentry            = {[chufanlai:5]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Parallel Coordinates with Data Labels.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -1192,5 +1223,42 @@
   File                     = {:Visual clustering in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
+}
+
+@comment{jabref-meta: groupsversion:3;}
+
+@comment{jabref-meta: groupstree:
+0 AllEntriesGroup:;
+1 ExplicitGroup:Perception\;0\;dasgupta2010pargnostics\;holten2010eval
+uation\;johansson2008perceiving\;johansson2008screen\;li2010judging\;t
+atu2009combining\;;
+1 ExplicitGroup:Survey\;0\;146402\;albuquerque2009quality\;bertini2011
+quality\;grinstein2001high\;heinrich2013state\;inselberg1985plane\;ins
+elberg2009parallel\;siirtola2006interacting\;siirtola2009visual\;van20
+05value\;wong199430\;;
+1 ExplicitGroup:Data\;0\;barlow2004animator\;bendix2005parallel\;blaas
+2008extensions\;collins2009parallel\;dasgupta2011adaptive\;dasgupta201
+2conceptualizing\;feng2010matching\;heinrich2011progressive\;hofmann20
+13common\;johansson2007depth\;kosara2006parallel\;rosenbaum2012progres
+sive\;;
+1 ExplicitGroup:Application\;0\;berger2011uncertainty\;caat2007design\
+;gratzl2013lineup\;guo2011multi\;guo2011tripvista\;qu2007visual\;tory2
+005parallel\;;
+1 ExplicitGroup:AxesPlacement\;0\;claessen2011flexible\;fanea2005inter
+active\;heinrich2012parallel\;johansson20053\;lind2009many\;viau2010fl
+owvizmenu\;;
+1 ExplicitGroup:AxesReordering\;0\;ankerst1998similarity\;ferdosi2011v
+isualizing\;johansson2009interactive\;tatu2011automated\;wilkinson2006
+high\;yang2003interactive\;zhang2012network\;;
+1 ExplicitGroup:ClutterReduction\;0\;artero2004uncovering\;dang2010sta
+cking\;ellis2006enabling\;fua1999hierarchical\;geng2011angular\;guo201
+0interactive\;heinrich2009continuous\;heinrich2011evaluation\;johansso
+n2005revealing\;lehmann2011features\;mcdonnell2008illustrative\;muigg2
+011visual\;novotny2006outlier\;palmas2014edge\;peng2004clutter\;siirto
+la2000direct\;zhou2008visual\;zhou2009splatting\;;
+1 ExplicitGroup:Interaction\;0\;fua1999navigating\;fua2000structure\;h
+auser2002angular\;martin1995high\;;
+1 ExplicitGroup:LineImprovement\;0\;graham2003using\;moustafa2002some\
+;rosario2004mapping\;yuan2009scattering\;zhou2014parallel\;;
 }
 
