A little update. --ChufanLai

--- a/papers/PC_Application.bib
+++ b/papers/PC_Application.bib
@@ -26,10 +26,26 @@
   Number                   = {1},
   Pages                    = {70--79},
   Volume                   = {13},
+
   File                     = {:Design and evaluation of tiled parallel coordinate visualization of multichannel EEG data.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
   Timestamp                = {2015.04.08}
+}
+
+@Article{gratzl2013lineup,
+  Title                    = {Lineup: Visual analysis of multi-attribute rankings},
+  Author                   = {Gratzl, Samuel and Lex, Alexander and Gehlenborg, Nils and Pfister, Hanspeter and Streit, Marc},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2013},
+  Number                   = {12},
+  Pages                    = {2277--2286},
+  Volume                   = {19},
+
+  File                     = {:Lineup\: Visual analysis of multi-attribute rankings.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.29}
 }
 
 @InProceedings{guo2011tripvista,
@@ -53,6 +69,7 @@
   Year                     = {2011},
   Organization             = {IEEE},
   Pages                    = {19--26},
+
   File                     = {:Multi-dimensional transfer function design based on flexible dimension projection embedded in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -82,6 +99,7 @@
   Number                   = {1},
   Pages                    = {71--80},
   Volume                   = {11},
+
   File                     = {:A parallel coordinates style interface for exploratory volume visualization.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
