--- a/papers/PC_Data.bib
+++ b/papers/PC_Data.bib
@@ -2,21 +2,6 @@
 % Encoding: UTF-8
 
 
-@Article{kosara2006parallel,
-  Title                    = {Parallel sets: Interactive exploration and visual analysis of categorical data},
-  Author                   = {, Robert and Bendix, Fabian and Hauser, Helwig},
-  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
-  Year                     = {2006},
-  Number                   = {4},
-  Pages                    = {558--568},
-  Volume                   = {12},
-
-  File                     = {:Parallel sets\: Interactive exploration and visual analysis of categorical data.pdf:PDF},
-  Owner                    = {chufanlai},
-  Publisher                = {IEEE},
-  Timestamp                = {2015.04.08}
-}
-
 @InProceedings{barlow2004animator,
   Title                    = {Animator: A tool for the animation of parallel coordinates},
   Author                   = {Barlow, N and Stuart, Liz J},
@@ -116,6 +101,22 @@
   Timestamp                = {2015.04.08}
 }
 
+@InProceedings{heinrich2011progressive,
+  Title                    = {Progressive splatting of continuous scatterplots and parallel coordinates},
+  Author                   = {Heinrich, Julian and Bachthaler, Sven and Weiskopf, Daniel},
+  Booktitle                = {Computer Graphics Forum},
+  Year                     = {2011},
+  Number                   = {3},
+  Organization             = {Wiley Online Library},
+  Pages                    = {653--662},
+  Volume                   = {30},
+
+  __markedentry            = {},
+  File                     = {:Progressive splatting of continuous scatterplots and parallel coordinates.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.04.08}
+}
+
 @Article{heinrich2009continuous,
   Title                    = {Continuous parallel coordinates},
   Author                   = {Heinrich, Julian and Weiskopf, Daniel},
@@ -159,6 +160,21 @@
   Timestamp                = {2015.04.08}
 }
 
+@Article{kosara2006parallel,
+  Title                    = {Parallel sets: Interactive exploration and visual analysis of categorical data},
+  Author                   = {Kosara, Robert and Bendix, Fabian and Hauser, Helwig},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2006},
+  Number                   = {4},
+  Pages                    = {558--568},
+  Volume                   = {12},
+
+  File                     = {:Parallel sets\: Interactive exploration and visual analysis of categorical data.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.08}
+}
+
 @Article{lehmann2011features,
   Title                    = {Features in continuous parallel coordinates},
   Author                   = {Lehmann, Dirk J and Theisel, Holger},
@@ -171,6 +187,20 @@
   File                     = {:Features in continuous parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
+  Timestamp                = {2015.04.08}
+}
+
+@InProceedings{rosenbaum2012progressive,
+  Title                    = {Progressive parallel coordinates},
+  Author                   = {Rosenbaum, Ren{\'e} and Zhi, Jian and Hamann, Bernd},
+  Booktitle                = {Pacific Visualization Symposium (PacificVis), 2012 IEEE},
+  Year                     = {2012},
+  Organization             = {IEEE},
+  Pages                    = {25--32},
+
+  __markedentry            = {},
+  File                     = {:Progressive parallel coordinates.pdf:PDF},
+  Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
 }
 
