--- a/papers/parallelcoordinates.bib
+++ b/papers/parallelcoordinates.bib
@@ -407,6 +407,7 @@
   Pages                    = {2277--2286},
   Volume                   = {19},
 
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Lineup\: Visual analysis of multi-attribute rankings.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
