A little update. --ChufanLai

--- a/papers/PC_Data.bib
+++ b/papers/PC_Data.bib
@@ -86,6 +86,34 @@
   Timestamp                = {2015.04.10}
 }
 
+@InProceedings{dietzsch2009spray,
+  Title                    = {Spray: A visual analytics approach for gene expression data},
+  Author                   = {Dietzsch, Janko and Heinrich, Julian and Nieselt, Kay and Bartz, Dirk},
+  Booktitle                = {Visual Analytics Science and Technology, 2009. VAST 2009. IEEE Symposium on},
+  Year                     = {2009},
+  Organization             = {IEEE},
+  Pages                    = {179--186},
+
+  File                     = {:SpRay\: A Visual Analytics Approach for Gene Expression Data.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.05.02}
+}
+
+@Article{edsall2003parallel,
+  Title                    = {The parallel coordinate plot in action: design and use for geographic visualization},
+  Author                   = {Edsall, Robert M},
+  Journal                  = {Computational Statistics \& Data Analysis},
+  Year                     = {2003},
+  Number                   = {4},
+  Pages                    = {605--619},
+  Volume                   = {43},
+
+  File                     = {:The parallel coordinate plot in action\: design and 3 use for geographic visualization.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {Elsevier},
+  Timestamp                = {2015.05.02}
+}
+
 @Article{feng2010matching,
   Title                    = {Matching visual saliency to confidence in plots of uncertain data},
   Author                   = {Feng, David and Kwock, Lester and Lee, Yueh and Taylor, Russell M},
@@ -111,7 +139,6 @@
   Pages                    = {653--662},
   Volume                   = {30},
 
-  __markedentry            = {},
   File                     = {:Progressive splatting of continuous scatterplots and parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -198,7 +225,6 @@
   Organization             = {IEEE},
   Pages                    = {25--32},
 
-  __markedentry            = {},
   File                     = {:Progressive parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
