--- a/papers/parallelcoordinates.bib
+++ b/papers/parallelcoordinates.bib
@@ -251,6 +251,36 @@
   Timestamp                = {2015.04.26}
 }
 
+@InProceedings{dietzsch2009spray,
+  Title                    = {Spray: A visual analytics approach for gene expression data},
+  Author                   = {Dietzsch, Janko and Heinrich, Julian and Nieselt, Kay and Bartz, Dirk},
+  Booktitle                = {Visual Analytics Science and Technology, 2009. VAST 2009. IEEE Symposium on},
+  Year                     = {2009},
+  Organization             = {IEEE},
+  Pages                    = {179--186},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:SpRay\: A Visual Analytics Approach for Gene Expression Data.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.05.02}
+}
+
+@Article{edsall2003parallel,
+  Title                    = {The parallel coordinate plot in action: design and use for geographic visualization},
+  Author                   = {Edsall, Robert M},
+  Journal                  = {Computational Statistics \& Data Analysis},
+  Year                     = {2003},
+  Number                   = {4},
+  Pages                    = {605--619},
+  Volume                   = {43},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:The parallel coordinate plot in action\: design and 3 use for geographic visualization.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {Elsevier},
+  Timestamp                = {2015.05.02}
+}
+
 @Article{ellis2006enabling,
   Title                    = {Enabling automatic clutter reduction in parallel coordinate plots},
   Author                   = {Ellis, Geoffrey and Dix, Alan},
